--- a/public/Classes/CPCCalendarView/ColumnContentInsetReference.html
+++ b/public/Classes/CPCCalendarView/ColumnContentInsetReference.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>LayoutAttributes Structure Reference</title>
+    <title>ColumnContentInsetReference Enumeration Reference</title>
     <link rel="stylesheet" type="text/css" href="../../css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="../../css/highlight.css" />
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <a name="//apple_ref/swift/Struct/LayoutAttributes" class="dashAnchor"></a>
+    <a name="//apple_ref/swift/Enum/ColumnContentInsetReference" class="dashAnchor"></a>
 
-    <a title="LayoutAttributes Structure Reference"></a>
+    <a title="ColumnContentInsetReference Enumeration Reference"></a>
 
     <header class="header">
       <p class="header-col header-col--primary">
@@ -50,7 +50,7 @@
     <p class="breadcrumbs">
       <a class="breadcrumb" href="../../index.html">CrispyCalendar Reference</a>
       <img class="carat" src="../../img/carat.png" />
-      LayoutAttributes Structure Reference
+      ColumnContentInsetReference Enumeration Reference
     </p>
 
     <div class="content-wrapper">
@@ -179,14 +179,16 @@
 
         <section class="section">
           <div class="section-content">
-            <h1>LayoutAttributes</h1>
+            <h1>ColumnContentInsetReference</h1>
               <div class="declaration">
                 <div class="language">
-                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">struct</span> <span class="kt">LayoutAttributes</span> <span class="p">:</span> <span class="kt"><a href="../../Protocols/CPCViewLayoutAttributes.html">CPCViewLayoutAttributes</a></span></code></pre>
+                  <pre class="highlight swift"><code><span class="kd">@objc(CPCCalendarViewColumnContentInsetReference)</span>
+<span class="kd">public</span> <span class="kd">enum</span> <span class="kt">ColumnContentInsetReference</span> <span class="p">:</span> <span class="kt">Int</span></code></pre>
 
                 </div>
               </div>
-            
+            <p>Defines the boundary for ccalendar view content.</p>
+
           </div>
         </section>
 
@@ -197,9 +199,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:14CrispyCalendar23CPCViewLayoutAttributesP13roundingScale12CoreGraphics7CGFloatVvp"></a>
-                    <a name="//apple_ref/swift/Property/roundingScale" class="dashAnchor"></a>
-                    <a class="token" href="#/s:14CrispyCalendar23CPCViewLayoutAttributesP13roundingScale12CoreGraphics7CGFloatVvp">roundingScale</a>
+                    <a name="/s:14CrispyCalendar15CPCCalendarViewC27ColumnContentInsetReferenceO04fromfG0yA2EmF"></a>
+                    <a name="//apple_ref/swift/Element/fromContentInset" class="dashAnchor"></a>
+                    <a class="token" href="#/s:14CrispyCalendar15CPCCalendarViewC27ColumnContentInsetReferenceO04fromfG0yA2EmF">fromContentInset</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -207,18 +209,19 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        
+                        <p>Uses <code><a href="../../Classes/CPCCalendarView.html#/s:14CrispyCalendar15CPCCalendarViewC12contentInsetSo12UIEdgeInsetsVvp">contentInset</a></code> as zero boundary.</p>
+
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="k">var</span> <span class="nv">roundingScale</span><span class="p">:</span> <span class="kt">CGFloat</span> <span class="p">{</span> <span class="k">get</span> <span class="p">}</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">fromContentInset</span></code></pre>
 
                         </div>
                       </div>
                       <div class="slightly-smaller">
-                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L495-L497">Show on GitHub</a>
+                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCCalendarView.swift#L73">Show on GitHub</a>
                       </div>
                     </section>
                   </div>
@@ -226,9 +229,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesVyAESgACcfc"></a>
-                    <a name="//apple_ref/swift/Method/init(_:)" class="dashAnchor"></a>
-                    <a class="token" href="#/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesVyAESgACcfc">init(_:)</a>
+                    <a name="/s:14CrispyCalendar15CPCCalendarViewC27ColumnContentInsetReferenceO17fromLayoutMarginsyA2EmF"></a>
+                    <a name="//apple_ref/swift/Element/fromLayoutMargins" class="dashAnchor"></a>
+                    <a class="token" href="#/s:14CrispyCalendar15CPCCalendarViewC27ColumnContentInsetReferenceO17fromLayoutMarginsyA2EmF">fromLayoutMargins</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -236,19 +239,19 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Initializes layout attributes to match currently use values in the specified view.</p>
+                        <p>Uses <code>layoutMargin</code> as zero boundary.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="nf">init</span><span class="p">?(</span><span class="n">_</span> <span class="nv">view</span><span class="p">:</span> <span class="kt"><a href="../../Classes/CPCMonthView.html">CPCMonthView</a></span><span class="p">)</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">fromLayoutMargins</span></code></pre>
 
                         </div>
                       </div>
                       <div class="slightly-smaller">
-                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L513-L519">Show on GitHub</a>
+                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCCalendarView.swift#L75">Show on GitHub</a>
                       </div>
                     </section>
                   </div>
@@ -256,9 +259,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesV5month14separatorWidth9titleFont0J7MarginsAeA0C0V_12CoreGraphics7CGFloatVSo6UIFontCSo12UIEdgeInsetsVtcfc"></a>
-                    <a name="//apple_ref/swift/Method/init(month:separatorWidth:titleFont:titleMargins:)" class="dashAnchor"></a>
-                    <a class="token" href="#/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesV5month14separatorWidth9titleFont0J7MarginsAeA0C0V_12CoreGraphics7CGFloatVSo6UIFontCSo12UIEdgeInsetsVtcfc">init(month:separatorWidth:titleFont:titleMargins:)</a>
+                    <a name="/s:14CrispyCalendar15CPCCalendarViewC27ColumnContentInsetReferenceO18fromSafeAreaInsetsyA2EmF"></a>
+                    <a name="//apple_ref/swift/Element/fromSafeAreaInsets" class="dashAnchor"></a>
+                    <a class="token" href="#/s:14CrispyCalendar15CPCCalendarViewC27ColumnContentInsetReferenceO18fromSafeAreaInsetsyA2EmF">fromSafeAreaInsets</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -266,135 +269,19 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Initializes layout attributes for a specific month view.</p>
+                        <p>Uses <code>safeAreaInsets</code> as zero boundary.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="nf">init</span><span class="p">(</span><span class="nv">month</span><span class="p">:</span> <span class="kt"><a href="../../Structs/CPCMonth.html">CPCMonth</a></span><span class="p">,</span> <span class="nv">separatorWidth</span><span class="p">:</span> <span class="kt">CGFloat</span><span class="p">,</span> <span class="nv">titleFont</span><span class="p">:</span> <span class="kt">UIFont</span><span class="p">,</span> <span class="nv">titleMargins</span><span class="p">:</span> <span class="kt">UIEdgeInsets</span><span class="p">)</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">fromSafeAreaInsets</span></code></pre>
 
                         </div>
                       </div>
-                      <div>
-                        <h4>Parameters</h4>
-                        <table class="graybox">
-                          <tbody>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>month</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Month to be rendered by the measured view.</p>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>separatorWidth</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Width of separator lines of the measured view. Typically is equal to <code><a href="../../Classes/CPCMonthView/LayoutAttributes.html#/s:14CrispyCalendar23CPCViewLayoutAttributesP13roundingScale12CoreGraphics7CGFloatVvp">roundingScale</a></code>.</p>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>titleFont</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Font that the measure view would use to render month title.</p>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>titleMargins</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Additional month view title insets/outsets.</p>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
                       <div class="slightly-smaller">
-                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L528-L530">Show on GitHub</a>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesV5month07partialF0AeA0C0V_AC07PartialeF0Vtcfc"></a>
-                    <a name="//apple_ref/swift/Method/init(month:partialAttributes:)" class="dashAnchor"></a>
-                    <a class="token" href="#/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesV5month07partialF0AeA0C0V_AC07PartialeF0Vtcfc">init(month:partialAttributes:)</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Initializes layout attributes for a specific month view and other non-calendric partial attributes.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="nf">init</span><span class="p">(</span><span class="nv">month</span><span class="p">:</span> <span class="kt"><a href="../../Structs/CPCMonth.html">CPCMonth</a></span><span class="p">,</span> <span class="nv">partialAttributes</span><span class="p">:</span> <span class="kt"><a href="../../Classes/CPCMonthView/PartialLayoutAttributes.html">PartialLayoutAttributes</a></span><span class="p">)</span></code></pre>
-
-                        </div>
-                      </div>
-                      <div>
-                        <h4>Parameters</h4>
-                        <table class="graybox">
-                          <tbody>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>month</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Month to be rendered by the measured view.</p>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>partialAttributes</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Non-ccalendric layout attributes.</p>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
-                      <div class="slightly-smaller">
-                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L537-L539">Show on GitHub</a>
+                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCCalendarView.swift#L77">Show on GitHub</a>
                       </div>
                     </section>
                   </div>
