--- a/public/docsets/CrispyCalendar.docset/Contents/Resources/Documents/Classes/CPCMonthView/PartialLayoutAttributes.html
+++ b/public/docsets/CrispyCalendar.docset/Contents/Resources/Documents/Classes/CPCMonthView/PartialLayoutAttributes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>LayoutAttributes Structure Reference</title>
+    <title>PartialLayoutAttributes Structure Reference</title>
     <link rel="stylesheet" type="text/css" href="../../css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="../../css/highlight.css" />
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <a name="//apple_ref/swift/Struct/LayoutAttributes" class="dashAnchor"></a>
+    <a name="//apple_ref/swift/Struct/PartialLayoutAttributes" class="dashAnchor"></a>
 
-    <a title="LayoutAttributes Structure Reference"></a>
+    <a title="PartialLayoutAttributes Structure Reference"></a>
 
     <header class="header">
       <p class="header-col header-col--primary">
@@ -50,7 +50,7 @@
     <p class="breadcrumbs">
       <a class="breadcrumb" href="../../index.html">CrispyCalendar Reference</a>
       <img class="carat" src="../../img/carat.png" />
-      LayoutAttributes Structure Reference
+      PartialLayoutAttributes Structure Reference
     </p>
 
     <div class="content-wrapper">
@@ -179,14 +179,15 @@
 
         <section class="section">
           <div class="section-content">
-            <h1>LayoutAttributes</h1>
+            <h1>PartialLayoutAttributes</h1>
               <div class="declaration">
                 <div class="language">
-                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">struct</span> <span class="kt">LayoutAttributes</span> <span class="p">:</span> <span class="kt"><a href="../../Protocols/CPCViewLayoutAttributes.html">CPCViewLayoutAttributes</a></span></code></pre>
+                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">struct</span> <span class="kt">PartialLayoutAttributes</span></code></pre>
 
                 </div>
               </div>
-            
+            <p>This type groups various non-calendric layout attributes into single structure.</p>
+
           </div>
         </section>
 
@@ -197,9 +198,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:14CrispyCalendar23CPCViewLayoutAttributesP13roundingScale12CoreGraphics7CGFloatVvp"></a>
-                    <a name="//apple_ref/swift/Property/roundingScale" class="dashAnchor"></a>
-                    <a class="token" href="#/s:14CrispyCalendar23CPCViewLayoutAttributesP13roundingScale12CoreGraphics7CGFloatVvp">roundingScale</a>
+                    <a name="/s:14CrispyCalendar12CPCMonthViewC23PartialLayoutAttributesV14separatorWidth9titleFont0J7MarginsAE12CoreGraphics7CGFloatV_So6UIFontCSo12UIEdgeInsetsVtcfc"></a>
+                    <a name="//apple_ref/swift/Method/init(separatorWidth:titleFont:titleMargins:)" class="dashAnchor"></a>
+                    <a class="token" href="#/s:14CrispyCalendar12CPCMonthViewC23PartialLayoutAttributesV14separatorWidth9titleFont0J7MarginsAE12CoreGraphics7CGFloatV_So6UIFontCSo12UIEdgeInsetsVtcfc">init(separatorWidth:titleFont:titleMargins:)</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -207,73 +208,14 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="k">var</span> <span class="nv">roundingScale</span><span class="p">:</span> <span class="kt">CGFloat</span> <span class="p">{</span> <span class="k">get</span> <span class="p">}</span></code></pre>
-
-                        </div>
-                      </div>
-                      <div class="slightly-smaller">
-                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L495-L497">Show on GitHub</a>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesVyAESgACcfc"></a>
-                    <a name="//apple_ref/swift/Method/init(_:)" class="dashAnchor"></a>
-                    <a class="token" href="#/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesVyAESgACcfc">init(_:)</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Initializes layout attributes to match currently use values in the specified view.</p>
+                        <p>Initializes new non-calendric layout attributes instance.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="nf">init</span><span class="p">?(</span><span class="n">_</span> <span class="nv">view</span><span class="p">:</span> <span class="kt"><a href="../../Classes/CPCMonthView.html">CPCMonthView</a></span><span class="p">)</span></code></pre>
-
-                        </div>
-                      </div>
-                      <div class="slightly-smaller">
-                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L513-L519">Show on GitHub</a>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesV5month14separatorWidth9titleFont0J7MarginsAeA0C0V_12CoreGraphics7CGFloatVSo6UIFontCSo12UIEdgeInsetsVtcfc"></a>
-                    <a name="//apple_ref/swift/Method/init(month:separatorWidth:titleFont:titleMargins:)" class="dashAnchor"></a>
-                    <a class="token" href="#/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesV5month14separatorWidth9titleFont0J7MarginsAeA0C0V_12CoreGraphics7CGFloatVSo6UIFontCSo12UIEdgeInsetsVtcfc">init(month:separatorWidth:titleFont:titleMargins:)</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Initializes layout attributes for a specific month view.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="nf">init</span><span class="p">(</span><span class="nv">month</span><span class="p">:</span> <span class="kt"><a href="../../Structs/CPCMonth.html">CPCMonth</a></span><span class="p">,</span> <span class="nv">separatorWidth</span><span class="p">:</span> <span class="kt">CGFloat</span><span class="p">,</span> <span class="nv">titleFont</span><span class="p">:</span> <span class="kt">UIFont</span><span class="p">,</span> <span class="nv">titleMargins</span><span class="p">:</span> <span class="kt">UIEdgeInsets</span><span class="p">)</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="nf">init</span><span class="p">(</span><span class="nv">separatorWidth</span><span class="p">:</span> <span class="kt">CGFloat</span><span class="p">,</span> <span class="nv">titleFont</span><span class="p">:</span> <span class="kt">UIFont</span><span class="p">,</span> <span class="nv">titleMargins</span><span class="p">:</span> <span class="kt">UIEdgeInsets</span><span class="p">)</span></code></pre>
 
                         </div>
                       </div>
@@ -284,24 +226,12 @@
                             <tr>
                               <td>
                                 <code>
-                                <em>month</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Month to be rendered by the measured view.</p>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <code>
                                 <em>separatorWidth</em>
                                 </code>
                               </td>
                               <td>
                                 <div>
-                                  <p>Width of separator lines of the measured view. Typically is equal to <code><a href="../../Classes/CPCMonthView/LayoutAttributes.html#/s:14CrispyCalendar23CPCViewLayoutAttributesP13roundingScale12CoreGraphics7CGFloatVvp">roundingScale</a></code>.</p>
+                                  <p>Width of separator lines of the measured view. Typically is equal to <code>roundingScale</code>.</p>
                                 </div>
                               </td>
                             </tr>
@@ -333,68 +263,7 @@
                         </table>
                       </div>
                       <div class="slightly-smaller">
-                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L528-L530">Show on GitHub</a>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesV5month07partialF0AeA0C0V_AC07PartialeF0Vtcfc"></a>
-                    <a name="//apple_ref/swift/Method/init(month:partialAttributes:)" class="dashAnchor"></a>
-                    <a class="token" href="#/s:14CrispyCalendar12CPCMonthViewC16LayoutAttributesV5month07partialF0AeA0C0V_AC07PartialeF0Vtcfc">init(month:partialAttributes:)</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Initializes layout attributes for a specific month view and other non-calendric partial attributes.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="nf">init</span><span class="p">(</span><span class="nv">month</span><span class="p">:</span> <span class="kt"><a href="../../Structs/CPCMonth.html">CPCMonth</a></span><span class="p">,</span> <span class="nv">partialAttributes</span><span class="p">:</span> <span class="kt"><a href="../../Classes/CPCMonthView/PartialLayoutAttributes.html">PartialLayoutAttributes</a></span><span class="p">)</span></code></pre>
-
-                        </div>
-                      </div>
-                      <div>
-                        <h4>Parameters</h4>
-                        <table class="graybox">
-                          <tbody>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>month</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Month to be rendered by the measured view.</p>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <code>
-                                <em>partialAttributes</em>
-                                </code>
-                              </td>
-                              <td>
-                                <div>
-                                  <p>Non-ccalendric layout attributes.</p>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
-                      <div class="slightly-smaller">
-                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L537-L539">Show on GitHub</a>
+                        <a href="https://github.com/cleverpumpkin/crispycalendar/tree/master/CrispyCalendar/CrispyCalendar/View/CPCMonthView.swift#L488-L491">Show on GitHub</a>
                       </div>
                     </section>
                   </div>
